force-app/main/default/objects/Case/fields/AI_Predicted_Priority__c.field-meta.xml
<CustomField>
    <fullName>AI_Predicted_Priority__c</fullName>
    <defaultValue>null</defaultValue>
    <description>Priority value predicted by Einstein AI</description>
    <label>AI Predicted Priority</label>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>