force-app/main/default/objects/Case/fields/Customer_LTV_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Customer_LTV_Snapshot__c</fullName>
    <description>Customer Lifetime Value captured from Data Cloud at case creation</description>
    <label>Customer LTV Snapshot</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>