force-app/main/default/objects/Case/fields/Escalation_Score__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Score__c</fullName>
    <description>Calculated score (0-10) indicating escalation need</description>
    <label>Escalation Score</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>