force-app/main/default/objects/Case/fields/Sentiment_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Analysis__c</fullName>
    <description>Customer sentiment detected from case text</description>
    <label>Sentiment Analysis</label>
    <picklist>
        <picklistValues>
            <fullName>Positive</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Neutral</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Negative</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>